<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>com.ngueno</groupId>
	<artifactId>juno-payments-sdk-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>juno-payments-sdk-parent</name>
	<packaging>pom</packaging>

	<properties>
        <!-- Project -->		
		<java.version>11</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- Plugins -->		
		<maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
		<argLine>-Xverify:none -Xms1024m -Xmx2048m -XX:MaxPermSize=1024m</argLine>
		<maven.compiler.source>${java.version}</maven.compiler.source>
    	<maven.compiler.target>${java.version}</maven.compiler.target>
		<spring-boot.repackage.skip>true</spring-boot.repackage.skip>
		
		<!-- Dependencies  -->
		<spring-boot.version>2.5.2</spring-boot.version>
		<junit.version>5.8.0-M1</junit.version>
		<lombok.version>1.18.20</lombok.version>
		<mockserver.version>5.11.2</mockserver.version>
		<commons-lang3.version>3.12.0</commons-lang3.version>
		<commons-io.version>2.10.0</commons-io.version>
		<commons-collection4.version>4.4</commons-collection4.version>
		<jose4j.version>0.7.8</jose4j.version>
	</properties>

	<modules>
		<module>../juno-payments-sdk-core</module>
		<module>../juno-payments-sdk-webhooks</module>
		<module>../juno-payments-sdk-starter</module>
		<module>../juno-payments-sdk-client</module>
	</modules>

	<dependencyManagement>
		<dependencies>

			<!-- Modules -->
			<dependency>
				<groupId>com.ngueno</groupId>
				<artifactId>juno-payments-sdk-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.ngueno</groupId>
				<artifactId>juno-payments-sdk-webhooks</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.ngueno</groupId>
				<artifactId>juno-payments-sdk-starter</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.ngueno</groupId>
				<artifactId>juno-payments-sdk-client</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- Spring -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons-lang3.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-collections4</artifactId>
				<version>${commons-collection4.version}</version>
			</dependency>
			<dependency>
				<groupId>org.bitbucket.b_c</groupId>
				<artifactId>jose4j</artifactId>
				<version>${jose4j.version}</version>
			</dependency>

			<!-- Other -->
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
				<scope>provided</scope>
			</dependency>

			<!-- Test -->
			<dependency>
				<groupId>org.mock-server</groupId>
				<artifactId>mockserver-junit-jupiter</artifactId>
				<version>${mockserver.version}</version>
				<scope>test</scope>
			</dependency>
			
			<dependency>
	            <groupId>org.springframework.boot</groupId>
	            <artifactId>spring-boot-dependencies</artifactId>
	            <version>${spring-boot.version}</version>
	            <type>pom</type>
	            <scope>import</scope>
        	</dependency>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${junit.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>${spring-boot.version}</version>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
